[project]
name = "vsifile"
description = "Super simple file reader."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = []
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "diskcache",
    "attrs",
    "cachetools",
    "httpx",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "rasterio",
]
s3 = [
    "boto3",
]
dev = [
    "pre-commit",
    "rasterio~=1.4a3",
]


docs = [
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "pygments",
]

[project.urls]
Homepage = 'https://developmentseed.github.io/vsifile/'
Documentation = "https://developmentseed.github.io/vsifile/"
Issues = "https://github.com/developmentseed/vsifile/issues"
Source = "https://github.com/developmentseed/vsifile"
Changelog = "https://developmentseed.github.io/vsifile/release-notes/"


[tool.hatch.version]
path = "vsifile/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "/docs",
  ".github",
  ".history",
  ".bumpversion.cfg",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  "AUTHORS.txt",
  "CHANGES.md",
  "CONTRIBUTING.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["vsifile"]

[tool.mypy]
no_strict_optional = "True"

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
