[project]
name = "vsifile"
description = "Super simple file reader."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = []
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "diskcache",
    "attrs",
    "cachetools",
    "obstore>=0.5,<0.7",
    "pydantic",
    "pydantic-settings",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "rangehttpserver",
    "rasterio>=1.4.0",
]
dev = [
    "pre-commit",
    "rasterio>=1.4.0",
]
benchmark = [
    "pytest",
    "rangehttpserver",
    "pytest-benchmark",
    "rasterio>=1.4.0",
]

docs = [
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "pygments",
]

[project.urls]
Homepage = 'https://developmentseed.github.io/vsifile/'
Documentation = "https://vincentsarago.github.io/vsifile/"
Issues = "https://github.com/vincentsarago/vsifile/issues"
Source = "https://github.com/vincentsarago/vsifile"
Changelog = "https://vincentsarago.github.io/vsifile/release-notes/"


[tool.hatch.version]
path = "vsifile/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "/docs",
  ".github",
  ".history",
  ".bumpversion.cfg",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  "AUTHORS.txt",
  "CHANGES.md",
  "CONTRIBUTING.md",
  "/examples",
  ".env.example",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["vsifile"]

[tool.mypy]
no_strict_optional = "True"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]


[tool.bumpversion]
current_version = "0.4.1"
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "vsifile/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
